--- a/zebra_blinds.html
+++ b/zebra_blinds.html
@@ -232,44 +232,59 @@
                                 <div class="widget-content">
                                     <ul class="category-list clearfix"> 
                                         <li class="active">
-                                            <h5><a href="service-details.html">Roller Blinds</a></h5>
+                                            <h5><a href="zebra_blinds.html">Zebra Blinds</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="service-details-2.html">Duplex Blinds</a></h5>
+                                            <h5><a href="galaxy.html">Galaxy Curtains</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="service-details-3.html">Venetian Blinds</a></h5>
+                                            <h5><a href="roller_blinds.html">Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="service-details-4.html">Roman Blinds</a></h5>
+                                            <h5><a href="silhouette.html">Silhouette</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="service-details-5.html">Vertical Blinds</a></h5>
+                                            <h5><a href="wood.html">Wood Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="graphic.html">Graphic Blind</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="outdoor.html">Outdoor Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="laser.html">Laser Roller Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="aliminum.html">Aliminum Blinds</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="blackout curtains.html">Blackout Roller Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="roman_blinds.html">Roman Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
+                                            <h5><a href="smart.html">Motorization & Smart Home Solutions</a></h5>
                                             <span class="line"></span>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="sidebar-gallery" style="background-image: url(assets/images/resource/sidebar-1.jpg);">
+                            <div class="sidebar-gallery" style="background-image: url(assets/images/gallery//zebra/1.jpg);">
                                 <div class="btn-box">
                                     <a href="gallery-1.html" class="theme-btn-one">view gallery</a>
-                                </div>
-                            </div>
-                            <div class="sidebar-widget download-brochure">
-                                <div class="widget-title">
-                                    <h3>Download Brochure</h3>
-                                    <div class="shape"></div>
-                                </div>
-                                <div class="widget-content">
-                                    <ul class="brochure-list clearfix">
-                                        <li><h5><i class="fal fa-file-pdf"></i><a href="service-details.html">Service Brochure</a></h5></li>
-                                        <li><h5><i class="fal fa-file-pdf"></i><a href="service-details.html">Pricing Guide</a></h5></li>
-                                        <li><h5><i class="fal fa-file-pdf"></i><a href="service-details.html">Artbook Gallery</a></h5></li>
-                                    </ul>
                                 </div>
                             </div>
                             <div class="sidebar-widget free-quote">
@@ -302,42 +317,48 @@
                     <div class="col-lg-8 col-md-12 col-sm-12 content-side">
                         <div class="service-details-content">
                             <div class="content-one">
-                                <figure class="image-box"><img src="assets/images/service/service-details-1.jpg" alt=""></figure>
-                                <div class="text">
-                                    <h2>Modify Your Interior with Roller Blinds</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
-                                    <p>Aliqa enim sed ipsum nisi ain veniam quis nostrul aliqua enim lore ipsum lorem ipsum dolor sit amets nsectetur adipisicing elit sed eiusmod tempor labore dolore magna.</p>
-                                    <h2>Why do you need a Roller Blinds</h2>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa aliqa enim sed ipsum nisi ain.</p>
-                                    <ul class="list-item clearfix">
-                                        <li>Dolor in reprehenderit in voluptate velit esse</li>
-                                        <li>Cillum dolore eu fugiat nulla pariatur</li>
-                                        <li>Excepteur sint occaecat cupidatat non proident</li>
-                                        <li>Sunt in culpa aliqa enim sed ipsum nisi ain</li>
-                                    </ul>
+                                    <figure class="image-box">
+                                        <img src="assets/images/zebra.jpg" alt="Duplex (zebra) blinds installed on a large window">
+                                    </figure>
+                                    <div class="text">
+                                        <h2>Duplex (Zebra) Blinds for Day &amp; Night Control</h2>
+                                        <p>Zebra blinds are made from a double layer of fabric with alternating sheer and solid stripes. By aligning or offsetting these stripes, you can easily switch between soft filtered light and full privacy without lifting the blind all the way up.</p>
+                                        <p>During the day, the sheer sections let daylight into the room while still softening glare. At night, the solid bands overlap to create a more private, darker environment. With a wide choice of colours, patterns and textures, zebra blinds add a modern, tidy look to living rooms, bedrooms, kitchens and offices.</p>
+
+                                        <h2>Why Choose Zebra Blinds from CaptainBlinds?</h2>
+                                        <p>Our zebra blinds are manufactured using high-quality polyester and metallic yarns and are fully customized to the exact dimensions of your windows. We measure your windows, help you choose the right fabric and colour, and then have your blinds made-to-order and professionally installed for a perfect fit.</p>
+                                        <ul class="list-item clearfix">
+                                            <li>Flexible day/night light control in one blind</li>
+                                            <li>Helps block up to 99.9% of UV rays when fully closed</li>
+                                            <li>Modern, space-saving design with clean lines</li>
+                                            <li>Optional motorized operation and smart home control</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
                             <div class="two-column">
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 video-column">
-                                        <div class="video-inner" style="background-image: url(assets/images/resource/video-1.jpg);">
-                                            <div class="video-content centred">
-                                                <a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="lightbox-image video-btn" data-caption=""><i class="far fa-play"></i></a>
-                                                <h3>Watch The Video</h3>
-                                            </div>
+                                        <div class="video-inner">
+                                            <video class="product-video"
+                                                id="zebraVideo"
+                                                src="assets/images/gallery/zebra/zebra.mp4"
+                                                controls
+                                                playsinline
+                                                muted>
+                                            </video>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 text-column">
                                         <div class="text">
                                             <i class="fal fa-comment"></i>
-                                            <h3>Product Specification & Installation</h3>
+                                            <h3>Product Features &amp; Installation</h3>
                                             <ul class="list-item clearfix">
-                                                <li>Width: 13" - 107" Standard Lift</li>
-                                                <li>Height: 12" - 108" Standard Lift</li>
-                                                <li>Min Inside-Mount Depth: 1 1/8"</li>
-                                                <li>Min Flush Inside-Mount Depth: 3"</li>
-                                                <li>Min Outside-Mount Space: 2 1/4"</li>
-                                                <li>Headrail Dimensions: 2" x 2 1/4”</li>
+                                                <li>Custom-made to your window measurements</li>
+                                                <li>Multiple lift options: chain guard, wand motorized, remote, smartphone &amp; Alexa</li>
+                                                <li>Ideal for living rooms, bedrooms, kitchens and offices</li>
+                                                <li>Neat cassette and fabric roll for a clean, modern look</li>
+                                                <li>Easy to operate and simple to keep clean</li>
+                                                <li>Measured and installed by our professional team in Toronto &amp; the GTA</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -345,31 +366,31 @@
                             </div>
                             <div class="content-two">
                                 <div class="text">
-                                    <h2>How to buy Fauxis Roller Blinds</h2>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa aliqa enim sed ipsum nisi ain.</p>
+                                    <h2>How to Order Zebra Blinds</h2>
+                                    <p>Ordering zebra blinds with CaptainBlinds is simple. Call us, send a message or fill out the quote form and tell us about your rooms and windows. We’ll schedule a free in-home consultation to show you fabric samples, discuss colours and opacity levels, and take precise measurements before your blinds are manufactured.</p>
                                 </div>
                                 <div class="content_block_1">
                                     <div class="content-box">
                                         <div class="inner-box">
-                                            <figure class="vector-image-2"><img src="assets/images/resource/vector-image-6.png" alt=""></figure>
+                                            <figure class="vector-image-2">
+                                                <img src="assets/images/resource/vector-image-6.png" alt="">
+                                            </figure>
                                             <div class="inner clearfix">
                                                 <ul class="list-item">
-                                                    <li>Customize Your Design</li>
-                                                    <li>No compromise on quality</li>
-                                                    <li>Classic blind controls light</li>
-                                                </ul>
-                                                <ul class="list-item pl-45">
-                                                    <li>Fully natural colors used</li>
-                                                    <li>Best choice blinds & curtains</li>
-                                                    <li>Open close easily by wand tilt</li>
+                                                    <li>Choose fabric, colour &amp; light level</li>
+                                                    <li>Select chain or motorized lift systems</li>
+                                                    <li>Coordinate blinds with your décor</li>
+                                                    <li>Custom-made for each individual window</li>
+                                                    <li>Installed by experienced professionals</li>
+                                                    <li>Designed for everyday comfort and privacy</li>
                                                 </ul>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="text">
-                                    <h2>Delivery & Fitting Guide</h2>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa aliqa enim Call us <a href="tel:1258985703">1-258-985-703</a></p>
+                                    <h2>Delivery &amp; Fitting Guide</h2>
+                                    <p>After your fabric and options are confirmed, your zebra blinds are produced to size and prepared for installation. We then return to fit the blinds, check operation and make any final adjustments so they run smoothly and look perfectly level. For timing, measuring and installation details, or to book your visit, call us at <a href="tel:14379955552">(437) 995-5552</a> or use our contact form.</p>
                                 </div>
                             </div>
                         </div>
@@ -471,7 +492,16 @@
             <span class="far fa-long-arrow-alt-up"></span>
         </button>
     </div>
+    <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const video = document.getElementById("zebraVideo");
 
+        // Set timestamp when metadata is loaded
+        video.addEventListener("loadedmetadata", function () {
+            video.currentTime = 4; // start at 5 seconds
+        });
+    });
+    </script>
 
     <!-- jequery plugins -->
     <script src="assets/js/jquery.js"></script>
