--- a/zebra_blinds.html
+++ b/zebra_blinds.html
@@ -337,18 +337,7 @@
                                 </div>
                             <div class="two-column">
                                 <div class="row clearfix">
-                                    <div class="col-lg-6 col-md-6 col-sm-12 video-column">
-                                        <div class="video-inner">
-                                            <video class="product-video"
-                                                id="zebraVideo"
-                                                src="assets/images/gallery/zebra/zebra.mp4"
-                                                controls
-                                                playsinline
-                                                muted>
-                                            </video>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-12 text-column">
+                                    <div class="col-12 text-column">
                                         <div class="text">
                                             <i class="fal fa-comment"></i>
                                             <h3>Product Features &amp; Installation</h3>
