available product pages added

--- a/index.html
+++ b/index.html
@@ -111,12 +111,13 @@
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
-                                            <li><a href="wood.html">Wood Blinds</a></li>
+                                            <li><a href="wood.html">Wood Blinds</a></li>                                    
+                                            <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>
                                             <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aliminum Blinds</a></li>
-                                            <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
+                                            <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                         </ul>
@@ -977,6 +978,7 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
+                                            <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>                                    
                                         </ul>
                                     </div>
                                 </div>
@@ -990,7 +992,7 @@
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aliminum Blinds</a></li>
-                                            <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
+                                            <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                             
