--- a/zebra_blinds.html
+++ b/zebra_blinds.html
@@ -114,12 +114,13 @@
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
-                                            <li><a href="wood.html">Wood Blinds</a></li>
+                                            <li><a href="wood.html">Wood Blinds</a></li>                                    
+                                            <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>
                                             <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aliminum Blinds</a></li>
-                                            <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
+                                            <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                         </ul>
@@ -252,6 +253,10 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
+                                            <h5><a href="dual_blackout.html">Dual Blackout Shades</a></h5>
+                                            <span class="line"></span>
+                                        </li>
+                                        <li>
                                             <h5><a href="graphic.html">Graphic Blind</a></h5>
                                             <span class="line"></span>
                                         </li>
@@ -268,7 +273,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="blackout curtains.html">Blackout Roller Shades</a></h5>
+                                            <h5><a href="blackout_curtains.html">Blackout Roller Shades</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -440,6 +445,7 @@
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
+                                            <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>                                    
                                         </ul>
                                     </div>
                                 </div>
@@ -453,7 +459,7 @@
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
                                             <li><a href="aliminum.html">Aliminum Blinds</a></li>
-                                            <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
+                                            <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
                                             
