--- a/blackout_curtains.html
+++ b/blackout_curtains.html
@@ -323,7 +323,7 @@
                         <div class="service-details-content">
                             <div class="content-one">
                                 <figure class="image-box">
-                                    <img src="assets/images/zebra.jpg" alt="Blackout roller shades on a large window in a modern living room">
+                                    <img src="assets/images/blackout.jpg" alt="Blackout roller shades on a large window in a modern living room">
                                 </figure>
                                 <div class="text">
                                     <h2>Blackout Roller Shades for Complete Light Control</h2>
