--- a/galaxy.html
+++ b/galaxy.html
@@ -287,7 +287,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="sidebar-gallery" style="background-image: url(assets/images/gallery//zebra/1.jpg);">
+                            <div class="sidebar-gallery" style="background-image: url(assets/images/gallery//galaxy/1.jpg);">
                                 <div class="btn-box">
                                     <a href="gallery-1.html" class="theme-btn-one">view gallery</a>
                                 </div>
@@ -323,7 +323,7 @@
                         <div class="service-details-content">
                             <div class="content-one">
                                 <figure class="image-box">
-                                    <img src="assets/images/zebra.jpg" alt="Galaxy Curtains (Vertical Zebra Curtains) installed on large windows">
+                                    <img src="assets/images/galaxy.jpg" alt="Galaxy Curtains (Vertical Zebra Curtains) installed on large windows">
                                 </figure>
                                 <div class="text">
                                     <h2>Galaxy Curtains (Vertical Zebra Curtains)</h2>
