--- a/outdoor.html
+++ b/outdoor.html
@@ -319,7 +319,7 @@
                         <div class="service-details-content">
                             <div class="content-one">
                                 <figure class="image-box">
-                                    <img src="assets/images/outdoor-shades.jpg" alt="Outdoor Shades installed on a patio to block sun and glare">
+                                    <img src="assets/images/outdoor.jpg" alt="Outdoor Shades installed on a patio to block sun and glare">
                                 </figure>
                                 <div class="text">
                                     <h2>Outdoor Shades for Patios, Decks &amp; Pergolas</h2>
