--- a/roller_blinds.html
+++ b/roller_blinds.html
@@ -287,7 +287,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="sidebar-gallery" style="background-image: url(assets/images/gallery//zebra/1.jpg);">
+                            <div class="sidebar-gallery" style="background-image: url(assets/images/gallery/roller/1.jpg);">
                                 <div class="btn-box">
                                     <a href="gallery-1.html" class="theme-btn-one">view gallery</a>
                                 </div>
@@ -324,7 +324,7 @@
                         <div class="service-details-content">
                             <div class="content-one">
                                 <figure class="image-box">
-                                    <img src="assets/images/zebra.jpg" alt="Roller shades installed on large modern windows">
+                                    <img src="assets/images/roller.jpg" alt="Roller shades installed on large modern windows">
                                 </figure>
                                 <div class="text">
                                     <h2>Roller Shades &amp; Solar Shades</h2>
