zebra blinds BLOG

--- a/zebra_blinds.html
+++ b/zebra_blinds.html
@@ -327,8 +327,9 @@
                                     </figure>
                                     <div class="text">
                                         <h2>Duplex (Zebra) Blinds for Day &amp; Night Control</h2>
-                                        <p>Zebra blinds are made from a double layer of fabric with alternating sheer and solid stripes. By aligning or offsetting these stripes, you can easily switch between soft filtered light and full privacy without lifting the blind all the way up.</p>
+                                        <p>Zebra blinds are made from a double layer of fabric with alternating sheer and solid stripes. By aligning or offsetting these stripes, you can easily switch between soft filtered light and full privacy without lifting the blind all the way up. If you want to dive deeper into how they work, where to use them and what to choose, you can read our in-depth <a href="zebra-blinds-buying-guide.html">Zebra Blinds Buying Guide</a>.</p>
                                         <p>During the day, the sheer sections let daylight into the room while still softening glare. At night, the solid bands overlap to create a more private, darker environment. With a wide choice of colours, patterns and textures, zebra blinds add a modern, tidy look to living rooms, bedrooms, kitchens and offices.</p>
+
 
                                         <h2>Why Choose Zebra Blinds from CaptainBlinds?</h2>
                                         <p>Our zebra blinds are manufactured using high-quality polyester and metallic yarns and are fully customized to the exact dimensions of your windows. We measure your windows, help you choose the right fabric and colour, and then have your blinds made-to-order and professionally installed for a perfect fit.</p>
@@ -361,7 +362,8 @@
                             <div class="content-two">
                                 <div class="text">
                                     <h2>How to Order Zebra Blinds</h2>
-                                    <p>Ordering zebra blinds with CaptainBlinds is simple. Call us, send a message or fill out the quote form and tell us about your rooms and windows. We’ll schedule a free in-home consultation to show you fabric samples, discuss colours and opacity levels, and take precise measurements before your blinds are manufactured.</p>
+                                    <p>Ordering zebra blinds with CaptainBlinds is simple. Call us, send a message or fill out the quote form and tell us about your rooms and windows. We’ll schedule a free in-home consultation to show you fabric samples, discuss colours and opacity levels, and take precise measurements before your blinds are manufactured. If you’d like to understand all the options before we visit, our detailed <a href="zebra-blinds-buying-guide.html">Zebra Blinds Buying Guide</a> explains fabrics, lift systems, pricing factors and room-by-room recommendations.</p>
+
                                 </div>
                                 <div class="content_block_1">
                                     <div class="content-box">
